# welloyewa_new

./: .dev_encryption_key  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .replit  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  alembic.ini  bot_data.json  docker-compose.yml  main.py  pyproject.toml  pytest_output.txt  replit.md  requirements-dev.txt  requirements.txt  requirements_fixed.txt  setup.cfg  start.sh
.agents/memory/: MEMORY.md  wolloyewa-admin-routing.md  wolloyewa-deep-audit.md  wolloyewa-import-fixes.md  wolloyewa-startup-config.md  wolloyewa-web-app-templates.md
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_migration.py  002_add_user_preferences.py  003_add_inventory_tracking.py  004_add_payment_reconciliation.py  005_add_audit_logs.py
apps/: __init__.py
apps/analytics/: __init__.py  repository.py  schemas.py  services.py  user_behavior.py
apps/common/: __init__.py  audit_logs.py  models.py  repository.py  schemas.py
apps/inventory/: __init__.py  models.py  repository.py  schemas.py  services.py
apps/marketing/: __init__.py  campaigns.py  coupons.py  loyalty.py  models.py  repository.py  schemas.py  services.py
apps/orders/: __init__.py  events.py  invoice_gen.py  models.py  refunds.py  repository.py  schemas.py  services.py  tracking.py
apps/payments/: __init__.py  schemas.py
apps/products/: __init__.py  category_manager.py  models.py  pricing_engine.py  repository.py  reviews.py  schemas.py  search_engine.py  services.py
apps/support/: __init__.py  faq_engine.py  models.py  repository.py  schemas.py  services.py  ticketing.py
apps/users/: __init__.py  models.py  preferences.py  repository.py  schemas.py  services.py
bot/: __init__.py  bot_instance.py  dispatcher.py  webhooks.py
bot/handlers/: __init__.py  broadcaster.py  cart.py  catalog.py  checkout.py  deep_linking.py  errors.py  feedback.py  location.py  profile.py  search.py  start.py  wishlist.py
bot/keyboards/: __init__.py  builder.py  inline.py  reply.py
bot/locales/: messages.pot
bot/middlewares/: __init__.py  analytics_mw.py  auth.py  i18n.py  logging.py  role_check.py  throttling.py
bot/states/: __init__.py  auth_states.py  order_states.py  support_states.py
bot/web_app/: __init__.py  router.py
core/: __init__.py  cache_keys.py  circuit_breaker.py  config.py  constants.py  dependencies.py  events.py  exceptions.py  lifespan.py  logger.py  rate_limiter.py  security.py  security_compat.py
core/data_pipeline/: __init__.py  ab_testing_framework.py  churn_predictor.py  cohort_analysis.py  real_time_analytics.py  recommendation_engine.py
core/monitoring/: __init__.py  alerts.py  health_checks.py  metrics.py  sla_tracker.py  tracing.py
core/security/: __init__.py  audit_trail.py  encryption.py  fraud_detection.py  gdpr_compliance.py  middleware.py  pii_masker.py  rate_limiter_advanced.py  sql_injection_detector.py
core/utils/: __init__.py  currency.py  date_helpers.py  ethiopian_calendar.py  media_optimizer.py  pagination.py  string_utils.py  validators.py
devops/ci_cd/: .gitlab-ci.yml
devops/environments/: dev.env  prod.env  staging.env
devops/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
devops/nginx/: nginx.conf
docs/: api_docs.md  deployment.md  development_guide.md  disaster_recovery.md  ethiopia_compliance.md  security_audit.md  system_architecture.md  user_manual.md
infrastructure/: __init__.py
infrastructure/api/: __init__.py
infrastructure/backup/: __init__.py  automated_backup.py  backup_verification.py  failover_automation.py  point_in_time_recovery.py  replication_manager.py
infrastructure/compliance/: __init__.py  audit_log_retention.py  data_residency.py  invoice_legal_format.py  privacy_policy_gen.py  tax_calculator.py  terms_checker.py
infrastructure/database/: __init__.py  base.py  migrations.py  session.py
infrastructure/gateway/: __init__.py  api_versioning.py  circuit_breaker_v2.py  request_validator.py  response_cache.py  retry_policies.py  router.py
infrastructure/mobile_api/: __init__.py  biometric_auth.py  deep_linking_router.py  offline_sync.py  qr_scanner_integration.py
infrastructure/monitoring/: __init__.py  health_checks.py  metrics.py
infrastructure/multi_tenant/: __init__.py  permission_matrix.py  subscription_plans.py  team_management.py  tenant_resolver.py
infrastructure/notifications/: __init__.py  base.py  email_service.py  sms_gateway.py  telegram_notifier.py
infrastructure/payments/: __init__.py  base.py  cbe_birr.py  chapa.py  factory.py  payment_verifier.py  reconciliation.py  telebirr.py
infrastructure/payments_advanced/: __init__.py  currency_converter_live.py  escrow_service.py  invoice_generator.py  payment_analytics.py  split_payments.py  subscription_billing.py
infrastructure/queues/: __init__.py  batch_processor.py  dead_letter_handler.py  priority_queue.py  scheduled_tasks.py  task_deduplicator.py
infrastructure/redis/: __init__.py  cache_service.py  client.py  rate_limiter.py
infrastructure/storage/: __init__.py  base.py  cloudinary_provider.py  image_processor.py  local_provider.py  s3_provider.py
infrastructure/support_advanced/: __init__.py  ai_chatbot.py  auto_ticket_routing.py  canned_responses.py  customer_satisfaction.py  sentiment_analyzer.py  sla_monitor.py
infrastructure/workers/: __init__.py  beat_schedule.py  celery_app.py  tasks.py
scripts/: __init__.py  backup.sh  entrypoint.sh  generate_docs.sh  healthcheck.sh  migrate.sh  monitor.sh  restore.sh  seed_data.py  seed_db.py
tests/: __init__.py  conftest.py
tests/fixtures/: orders.json  products.json  users.json
tests/test_api/: __init__.py  test_health.py  test_orders.py  test_products.py  test_users.py
tests/test_bot/: __init__.py  test_bot_persistence.py  test_handlers.py  test_keyboards.py  test_middlewares.py
tests/test_integration/: __init__.py  test_order_flow.py  test_payment_flow.py
tests/test_services/: __init__.py  test_inventory.py  (+2 more)
(+135 files in other folders)
