[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wolloyewa-store-bot"
version = "1.0.0"
description = "Ethiopian E-commerce Telegram Bot with Multi-Vendor Support"
authors = ["Wolloyewa Team <info@wolloyewa.com>"]
license = "Proprietary"
readme = "README.md"
homepage = "https://wolloyewa.com"
repository = "https://github.com/wolloyewa/store-bot"
documentation = "https://docs.wolloyewa.com"
keywords = ["telegram", "ecommerce", "ethiopia", "bot", "fastapi", "multi-vendor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Customer Service",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Communications :: Chat",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
httpx = "^0.25.1"
aiofiles = "^23.2.1"
python-telegram-bot = {extras = ["job-queue"], version = "^20.7"}
aiogram = "^3.2.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
redis = "^5.0.1"
aioredis = "^2.0.1"
celery = "^5.3.4"
flower = "^2.0.1"
requests = "^2.31.0"
pycryptodome = "^3.19.0"
cryptography = "^41.0.7"
boto3 = "^1.34.7"
cloudinary = "^1.36.0"
Pillow = "^10.1.0"
python-multipart = "^0.0.6"
aiohttp = "^3.9.1"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-magic = "^0.4.27"
bleach = "^6.1.0"
psutil = "^5.9.0"
email-validator = "^2.1.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
clickhouse-driver = "^0.2.6"
babel = "^2.14.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
tenacity = "^8.2.3"
jinja2 = "^3.1.2"
markdown = "^3.5.1"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
opencv-python = "^4.8.1.78"
qrcode = "^7.4.2"
openpyxl = "^3.1.2"
weasyprint = "^60.2"
websockets = "^12.0"
slowapi = "^0.1.9"
strawberry-graphql = "^0.219.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
pytest-xdist = "^3.5.0"
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.11"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.5.0"
factory-boy = "^3.3.0"
faker = "^20.1.0"
responses = "^0.24.1"
ipdb = "^0.13.13"
ipython = "^8.20.0"
watchdog = "^3.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"
bandit = "^1.7.6"
safety = "^2.4.0b2"
locust = "^2.19.0"
docker = "^7.0.0"

[tool.poetry.scripts]
wolloyewa = "main:main"
seed-db = "scripts.seed_db:main"
migrate = "scripts.migrate:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/wolloyewa/store-bot/issues"
"Support" = "https://t.me/wolloyewa_support"

# ============================
# Black Configuration
# ============================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic/versions
)/
'''

# ============================
# Isort Configuration
# ============================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = ["alembic/versions"]
known_first_party = ["core", "apps", "infrastructure", "bot"]
known_third_party = ["fastapi", "sqlalchemy", "alembic", "celery", "redis", "pytest"]

# ============================
# Ruff Configuration
# ============================
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "alembic/versions",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "ANN001", "ANN201"]

# ============================
# Mypy Configuration
# ============================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
follow_imports = "silent"
exclude = [
    "alembic/",
    "tests/",
    "venv/",
]

[[tool.mypy.overrides]]
module = ["alembic.*", "bot.locales.*"]
ignore_errors = true

# ============================
# Pytest Configuration
# ============================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
    "-p", "no:cacheprovider",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "async: Async tests",
    "db: Database tests",
    "redis: Redis tests",
    "bot: Telegram bot tests",
    "api: API tests",
]
asyncio_mode = "auto"
timeout = 300
timeout_method = "thread"

# ============================
# Coverage Configuration
# ============================
[tool.coverage.run]
source = ["core", "apps", "infrastructure", "bot"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "bot/locales/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
show_missing = true
precision = 2

# ============================
# Bandit Configuration
# ============================
[tool.bandit]
exclude_dirs = ["tests", "alembic", "venv", "scripts"]
skips = ["B101", "B311", "B324"]
severity = "medium"
confidence = "medium"

# ============================
# Taskipy (Task Runner)
# ============================
[tool.taskipy.tasks]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
test = "pytest"
test-cov = "pytest --cov=. --cov-report=html"
lint = "ruff check . && flake8 ."
format = "black . && isort ."
typecheck = "mypy ."
security = "bandit -r ."
all = "task format && task lint && task typecheck && task test"

# ============================
# Commitizen Configuration
# ============================
[tool.commitizen]
name = "cz_conventional_commit"
version = "1.0.0"
version_files = [
    "pyproject.toml:version",
    "main.py:version",
]
tag_format = "v$version"
bump_message = "chore(release): bump version $current_version → $new_version"

# ============================
# Semantic Release Configuration
# ============================
[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
changelog_file = "CHANGELOG.md"

# ============================
# Pydantic Configuration
# ============================
[tool.pydantic]
python_version = "3.11"