# ============================
# WOLLOYEWA STORE BOT - SETUP CONFIGURATION
# ============================

[metadata]
name = wolloyewa_store_bot
version = 1.0.0
description = Ethiopian E-commerce Telegram Bot with Multi-Vendor Support
author = Wolloyewa Team
author_email = info@wolloyewa.com
license = Proprietary
url = https://wolloyewa.com
project_urls =
    Documentation = https://docs.wolloyewa.com
    Source Code = https://github.com/wolloyewa/store-bot
    Issue Tracker = https://github.com/wolloyewa/store-bot/issues

# ============================
# Flake8 Configuration
# ============================
[flake8]
max-line-length = 100
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv,
    alembic/versions,
    tests/fixtures,
    bot/locales,
    scripts,
    .eggs,
    *.egg
per-file-ignores =
    __init__.py: F401
    tests/*: S101, ANN001, ANN201, D100, D101, D102, D103, D104, D105, D106, D107
max-complexity = 10
docstring-convention = google
inline-quotes = double
multiline-quotes = double
enable-extensions = G, YTT, B9, RST
jobs = 4
output-file = reports/flake8_report.txt
statistics = true
count = true
show-source = true
format = default

# ============================
# Isort Configuration (Alternative)
# ============================
[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = alembic/versions
known_first_party = core,apps,infrastructure,bot
known_third_party = fastapi,sqlalchemy,alembic,celery,redis,pytest,aiogram,telegram
forced_separate = tests
combine_as_imports = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER

# ============================
# Pytest Configuration (Alternative)
# ============================
[tool:pytest]
minversion = 7.0
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --strict-markers
    --strict-config
    --tb=short
    --cov=.
    --cov-report=html
    --cov-report=term-missing
    --cov-fail-under=70
    -p no:cacheprovider
    --asyncio-mode=auto
markers =
    unit: Unit tests
    integration: Integration tests
    slow: Slow running tests
    async: Async tests
    db: Database tests
    redis: Redis tests
    bot: Telegram bot tests
    api: API tests
    e2e: End to end tests
    smoke: Smoke tests
    regression: Regression tests
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore::UserWarning

# ============================
# Coverage Configuration
# ============================
[coverage:run]
source = core,apps,infrastructure,bot
omit =
    */tests/*
    */alembic/*
    */__pycache__/*
    */migrations/*
    bot/locales/*
    scripts/*
    */test_*.py
    */conftest.py
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if __name__ == .__main__.:
    raise AssertionError
    raise NotImplementedError
    if 0:
    if False:
    if TYPE_CHECKING:
show_missing = true
precision = 2
skip_covered = false
skip_empty = false
ignore_errors = true

[coverage:html]
directory = coverage_html
title = Wolloyewa Store Bot Coverage Report
extra_css = coverage.css

# ============================
# Pycodestyle Configuration
# ============================
[pycodestyle]
max-line-length = 100
ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv,venv,alembic/versions
statistics = true
count = true
show-source = true

# ============================
# Pydocstyle Configuration
# ============================
[pydocstyle]
match = (?!test_|__init__).*\.py
match-dir = (?!tests|alembic|migrations|scripts).*
convention = google
add-select = D100,D101,D102,D103,D104,D105,D106,D107,D200,D201,D202,D203,D204,D205,D206,D207,D208,D209,D210,D211,D212,D213,D214,D215,D300,D301,D302,D400,D401,D402,D403,D404,D405,D406,D407,D408,D409,D410,D411,D412,D413,D414,D415,D416,D417
add-ignore = D100,D104,D105,D107,D203,D212,D213,D215,D404,D407,D408,D409,D410,D411,D412,D413,D414,D415,D416,D417

# ============================
# Bandit Configuration
# ============================
[bandit]
exclude = /tests/,/alembic/,/venv/,/scripts/
skips = B101,B311,B324,B410,B602,B603,B607,B404
severity = medium
confidence = medium
format = html
output = reports/bandit_report.html

# ============================
# MyPy Configuration (Alternative)
# ============================
[mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
follow_imports = silent
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = ^(alembic/|tests/|venv/|bot/locales/)

[mypy-alembic.*]
ignore_errors = true

[mypy-bot.locales.*]
ignore_errors = true

# ============================
# Pylint Configuration
# ============================
[pylint.master]
ignore = tests,alembic,venv,scripts,bot/locales
ignore-patterns = __pycache__,*.pyc,*.pyo
fail-under = 8.0
output-format = text
reports = no
score = yes
jobs = 4

[pylint.message_control]
enable = all
disable = C0114,C0115,C0116,  # Missing docstring
          R0903,               # Too few public methods
          R0201,               # Method could be function
          W0212,               # Protected access
          C0103,               # Invalid name
          C0301,               # Line too long
          R0801,               # Similar lines
          R0913,               # Too many arguments
          R0914,               # Too many locals
          W0703,               # Catching too general exception
          W1203                # Logging f-string

[pylint.basic]
good-names = i,j,k,ex,Run,_,id,db,q,r,s,t,app,db,io
bad-names = foo,bar,baz,tmp,temp,data,info,test
argument-naming-style = snake_case
class-naming-style = PascalCase
function-naming-style = snake_case
method-naming-style = snake_case
module-naming-style = snake_case
variable-naming-style = snake_case
const-naming-style = UPPER_CASE

[pylint.design]
max-args = 10
max-locals = 20
max-returns = 10
max-branches = 15
max-statements = 60
max-parents = 10
min-public-methods = 1
max-public-methods = 30

[pylint.format]
max-line-length = 100
max-module-lines = 1500
indent-string = '    '
expected-line-ending-format = LF

[pylint.similarities]
ignore-imports = yes
min-similarity-lines = 10

[pylint.variables]
init-import = no
dummy-variables-rgx = _|dummy|unused

[pylint.typecheck]
ignore-mixin-members = yes
ignore-none = yes

# ============================
# Build System Configuration
# ============================
[egg_info]
tag_build = 
tag_date = 0

[build_ext]
inplace = false

[bdist_wheel]
universal = false
python-tag = py311

# ============================
# Aliases
# ============================
[aliases]
test = pytest
lint = flake8
format = black . && isort .
typecheck = mypy .
security = bandit -r .
check = flake8 . && mypy . && bandit -r . && pytest